# PlantDisease

./: .env.example  .gitignore  PREPROCESSING_README.md  QUICK_START_CNN.md  README.md  analyze_features.py  check_features.py  cnn_baseline.py  config.yaml  pyproject.toml  requirements.txt  run_classifiers_only.py  run_complete_pipeline.py  run_preprocess_and_extract_features.py  run_tests_table.py  test_acceptance_criteria.py  test_resize_standardize.py  validate_acceptance_criteria.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/features/: all_features.npz  test.npz  train.npz  val.npz
docs/: CNN_BASELINE.md
examples/: cnn_baseline_examples.py
models/: cnn_baseline.py  utils.py
models/exports/: class_names.json  feature_columns.json  knn.pkl  logistic_regression.pkl  plant_disease_mobilenet_v3_small.onnx  svm.pkl
models/random_forest/: classify.py
models/svm/: __init__.py
models/xgboost/: xgboost_plantvillage.components.json  (+1 more)
notebooks/: leaf_disease_detection.ipynb
scripts/: 00_download_data.py  01_preprocess_images.py  02_make_splits.py  03_train_cnn.py  04_evaluate.py  04_evaluate_cnn.py  05_inference_cnn.py  comprehensive_evaluation.py  demo_single_image.py  download_and_train.py  evaluate_all_classifiers.py  evaluate_cli.py  extract_features_dataset.py  preprocess_cli.py  save_feature_columns.py  test_pipeline.py  train_cnn_cli.py  train_rf_cli.py  train_xgb_cli.py
tests/: test_classifiers.py  test_cnn_baseline.py  test_preprocess.py  test_rf_ensemble.py  test_splits.py  test_task1_xgboost.py
webapp/: README.md
(+44 files in other folders)
